# SnailPy

./: README.md  pyproject.toml  setup.cfg
snailpy/: __init__.py  snailpy.py
