[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "snailpy"
version = "0.0.14"
description = "A python package for interacting with Snail IDE's API features."

# Add these properties to the [tool.poetry] section
long_description = """
Write a detailed description of your project here using reStructuredText markup.
"""
long_description_content_type = "text/x-rst"

authors = [{name = "nmsderp", email = "nmsderp@gmail.com"}]
keywords = ["python"]
license = "GPL-3.0"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
]

[options]
packages = ["find"]
python_requires = ">=3.7"
include_package_data = true

[project_urls]
docs = "https://example.com/docs"
source = "https://github.com/example/snailpy"
