[metadata]
name = snailpy
version = 0.0.1
author = Nolan Simpson 
author_email = nmsderp@gmail.com
description = Use the Snail IDE api in your python programs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Snail-IDE/SnailPy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True